--- a/one/contrib/sites/locale/en/LC_MESSAGES/django.po
+++ b/one/contrib/sites/locale/en/LC_MESSAGES/django.po
@@ -16,20 +16,19 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-
-#: one/components/apps.py:7
-msgid "Components"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+#: one/contrib/sites/settings/apps.py:21
+msgid "Sites"
 msgstr ""
 
-#: one/components/models.py:95
-msgid "Created on"
+#: one/contrib/sites/settings/models.py:20
+msgid "Favicon of site"
 msgstr ""
 
-#: one/components/models.py:98
-msgid "Last modified on"
+#: one/contrib/sites/settings/models.py:26
+msgid "Logo of site"
 msgstr ""
 
-#: one/components/models.py:102
-msgid "Created by"
+#: one/contrib/sites/settings/models.py:32
+msgid "Mobile logo of site"
 msgstr ""
